--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <section id="qrcode">
             <h2>QR Code</h2>
-            <img src="images/qr-code.jpg" alt="QR Code" class="qr-image">
+            <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://wed-2023.github.io/318661808/&amp;size=100x100" alt="QR Code">
             
         </section>
 
