final updates: readme and logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <header>
         <nav id="navbar">
+            <div class="logo-container">
+                <img src="images/photo2.jpg" alt="Logo" class="navbar-logo">
+            </div>
             <ul>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#photos">My Photos</a></li>
